# stm32f4-baremetal

./: .clang-format  .gitignore  .gitinore
1-blink/: README.md  main.c
2-startup/: .gitignore  README.md
2-startup/src/: main.c
3-makefile/: Makefile  README.md
3-makefile/src/: main.c  startup_stm32f4.c
4-cmsis/: Makefile  compile_commands.json  stm32f4.ld
4-cmsis/src/: main.c
5-systick/: Makefile  compile_commands.json  stm32f4.ld
5-systick/src/: main.c  startup_stm32f4.c
6-timer/: README.md
6-timer/docs/: timer.drawio
6-usart/: Makefile  compile_commands.json  stm32f4.ld
6-usart/src/: main.c  usart.c
7-adc/: README.md  compile_commands.json
7-adc/include/: usart.h
7-adc/src/: main.c  usart.c
7-out-compare/: Makefile  README.md  stm32f4.ld
7-out-compare/docs/: out.drawio
99-usb/: Makefile  compile_commands.json
99-usb/demo/: cdc_loop.c  cdc_startup.c
99-usb/inc/: usb.h
cmake-projects/: fonts.cpp
cmake-projects/blink/: CMakeLists.txt
cmake-projects/blink/src/: main.cpp  startup_stm32f4.cpp
cmake-projects/blinkv2/: .clang-format  CMakeLists.txt  Makefile
cmake-projects/blinkv2/lib/gpio/: gpio_pin.cpp  gpio_pin.h  gpio_port.cpp  gpio_port.h
cmake-projects/blinkv2/lib/system/: system.cpp
cmake-projects/blinkv2/src/: main.cpp
cmake-projects/i2c-scanner/: CMakeLists.txt  Makefile  mcu_options.cmake  stm32f4.ld
cmake-projects/i2c-scanner/lib/gpio/: CMakeLists.txt  gpio_port.cpp
cmake-projects/i2c-scanner/lib/i2c/: i2c.cpp
cmake-projects/i2c-scanner/src/: main.cpp
cmake-projects/oled/: CMakeLists.txt  Makefile
cmake-projects/oled/include/: fonts.h  mj.h  oled.h  rohit.h
cmake-projects/oled/lib/gpio/: gpio_pin.cpp  gpio_pin.h  gpio_port.h
cmake-projects/oled/lib/i2c/: CMakeLists.txt  i2c.h
cmake-projects/oled/src/: i2c.cpp  main.cpp  oled.cpp  startup_stm32f4.cpp  syscalls.cpp
cmake-projects/usart/: :q  CMakeLists.txt  Makefile  mcu_options.cmake  stm32f4.ld
cmake-projects/usart/include/: stm32f401xe.h
cmake-projects/usart/lib/gpio/: gpio_port.cpp  gpio_port.h
cmake-projects/usart/lib/system/: CMakeLists.txt  system.h
cmake-projects/usart/lib/usart/: CMakeLists.txt  usart.cpp  usart.h
cmake-projects/usart/src/: main.cpp  syscalls.cpp
debug/: main.s
exti/: .clang-format  Makefile
exti/include/: core_cm4.h  timer.h
exti/src/: gpio.c  main.c  startup_stm32f4.c  timer.c
i2c-scanner/: Makefile  README.md  compile_commands.json  stm32f4.ld
i2c-scanner/include/: i2c.h  usart.h
i2c-scanner/src/: i2c.c  main.c  timer.c  usart.c
makefile/src/: main.c
oled/: compile_commands.json
oled/include/: fonts.h  horse_anim.h  i2c.h  oled.h  test.h
oled/src/: i2c.c  main.c  oled.c  startup_stm32f4.c  test.c
out-capture/: .clang-format  Makefile
out-capture/src/: main.c
pwm/: .clangd  compile_commands.json
pwm/include/: gpio.h
pwm/src/: main.c  startup_stm32f4.c
tim1/: Makefile
tim1/src/: main.c
timer/: .clang-format  .clangd  Makefile
timer/delay/: README.md
timer/include/: timer.h
timer/output-compare/: README.md
timer/output-compare/include/: stm32f401xc.h
timer/output-compare/src/: startup_stm32f4.c
timer/pwm/: Makefile  README.md
timer/src/: main.c  startup_stm32f4.c  syscalls.c
